
		ChangeLog for Net-Dict distribution

2.10 2013-07-20

    - Reformatted this file according to CPAN::Changes::Spec

2.09 2011-12-18

    - Fixed tests that started breaking due to changes in the dict.org server
    - Renamed ChangeLog to Changes & tweaked formatting to CPAN::Changes::Spec

2.08 2011-08-02

    - updated testsuite to refer to dict.org, as test.dict.org no longer exists
    - updated testsuite to reflect the much longer list of databases now hosted on dict.org

2.07 2003-05-06

	- updated testsuite to refer to test.dict.org,
	  and to reflect changes in the databases.

2.06 2002-03-23

	- imported into my home machine's CVS repository
	- updated email address

2.05 2001-04-25

	- moved the inline documentation to a separate file Dict.pod
	- added examples/portuguese.pl which illustrates accessing
	  an english-portuguese dictionary.
	  Example from Jose Joao Dias de Almeida <jj@di.uminho.pt>.

2.04 2001-04-23

	- tidied up the code for auth(), removing debugging statements, etc.
	- added documentation for the auth() method.
	- renamed auth.t to auth.test - don't want this run as
	  part of "make test": it needs my local config for testing.
	  Do something about that later.

2.03 2001-04-23

	- Added code which parses the welcome banner, to get msg id and
	  optional capabilities.
	- Added capabilities() method which returns a list of
	  supported optional capabilities.
	- Added has_capability() method for checking whether a
	  capability is supported by the server.
	- msg_id() method which returns the msg id from the server.
	  This is used in the auth() method.
	- Added auth() method, which uses Digest::MD5.
	- Created a testsuite for auth - auth.t


2.02 2001-04-03

	- Oops - forgot to add documentation for the status() method.

2.01 2001-04-03

	- Added status() method to Net::Dict - returns the string
	  returned by the DICT server when STATUS command is sent.
	  Couple of test cases in t/connection.t
